# GitGold

./: Cargo.toml  GitGold.txt  README.md
crates/gitcoin-challenge/: Cargo.toml
crates/gitcoin-challenge/src/: challenge.rs  lib.rs  proof.rs  validator.rs
crates/gitcoin-core/: Cargo.toml
crates/gitcoin-core/src/: config.rs  error.rs  types.rs
crates/gitcoin-crypto/: Cargo.toml
crates/gitcoin-crypto/src/: field.rs  hash.rs  keys.rs  lib.rs  shamir.rs  wallet.rs
crates/gitcoin-ledger/: Cargo.toml
crates/gitcoin-ledger/src/: balance.rs  lib.rs  merkle.rs  store.rs  supply.rs  transaction.rs
crates/gitcoin-storage/: Cargo.toml
crates/gitcoin-storage/src/: chunk.rs  db.rs  lib.rs  schema.rs
src/: lib.rs
tests/: integration_test.rs
