[workspace]
resolver = "2"
members = [
    "crates/gitcoin-core",
    "crates/gitcoin-crypto",
    "crates/gitcoin-storage",
    "crates/gitcoin-ledger",
    "crates/gitcoin-challenge",
]

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
proptest = "1.4"

# Root package for integration tests
[package]
name = "gitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
gitcoin-core = { path = "crates/gitcoin-core" }
gitcoin-crypto = { path = "crates/gitcoin-crypto" }
gitcoin-storage = { path = "crates/gitcoin-storage" }
gitcoin-ledger = { path = "crates/gitcoin-ledger" }
gitcoin-challenge = { path = "crates/gitcoin-challenge" }
serde_json = { workspace = true }
hex = { workspace = true }
