[workspace]
resolver = "2"
members = [
    "crates/GitGold-core",
    "crates/GitGold-crypto",
    "crates/GitGold-storage",
    "crates/GitGold-ledger",
    "crates/GitGold-challenge",
]

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
proptest = "1.4"

# Root package for integration tests
[package]
name = "GitGold"
version = "0.1.0"
edition = "2021"

[dependencies]
GitGold-core = { path = "crates/GitGold-core" }
GitGold-crypto = { path = "crates/GitGold-crypto" }
GitGold-storage = { path = "crates/GitGold-storage" }
GitGold-ledger = { path = "crates/GitGold-ledger" }
GitGold-challenge = { path = "crates/GitGold-challenge" }
serde_json = { workspace = true }
hex = { workspace = true }
