[package]
name = "gitcoin-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
gitcoin-core = { path = "../gitcoin-core" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
