[package]
name = "gitcoin-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
gitcoin-core = { path = "../gitcoin-core" }
gitcoin-crypto = { path = "../gitcoin-crypto" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
